code commit@Rahul
bug resolution and form validation til service category

--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -147,9 +147,9 @@
 															title="parent name">
 													</div>
 
-													<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="inlineRadioOptions">Active <input
-														type="radio" value="N" name="inlineRadioOptions">In-Active
+												<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px" >Active <input
+														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
 													</label>
 
 												</div>
