--- a/src/main/resources/templates/layouts/Master/financialactiveyear.html
+++ b/src/main/resources/templates/layouts/Master/financialactiveyear.html
@@ -142,8 +142,8 @@
 
 
 													<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked>Active <input
-														type="radio" value="N" name="active">In-Active
+														value="Y" name="active" checked style="margin-left: 5px" >Active <input
+														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
 													</label>
 													
 												</div>
