--- a/src/main/resources/templates/layouts/editview/editModule.html
+++ b/src/main/resources/templates/layouts/editview/editModule.html
@@ -68,7 +68,7 @@
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/module/}" method="POST"
+											<form role="form" th:action="@{/module/update/}" method="POST"
 												th:object="${module}">
 												<div class="box-body">
 
