--- a/src/main/resources/templates/layouts/editview/editProgram.html
+++ b/src/main/resources/templates/layouts/editview/editProgram.html
@@ -68,7 +68,7 @@
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/program/}" method="POST"
+											<form role="form" th:action="@{/program/update/}" method="POST"
 												th:object="${program}">
 												<div class="box-body">
 
