--- a/src/main/resources/templates/layouts/listview/listofuom.html
+++ b/src/main/resources/templates/layouts/listview/listofuom.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-		rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 
 </head>
@@ -41,7 +51,8 @@
 
 								<div class="box box-primary">
 
-									<input type="hidden" id="mess" name="mess" th:value="${message}">
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
 
 									<div class="box-header with-border">
 										<h3 class="box-title">List of UOM</h3>
@@ -57,8 +68,8 @@
 															<th scope="col">UOM Code</th>
 															<th scope="col">Units</th>
 															<th scope="col">Measurement System</th>
-															
-															
+
+
 															<th scope="col">Action</th>
 
 														</tr>
@@ -68,20 +79,20 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${uom.uomCode}">Garrett Winters</td>
 															<td th:text="${uom.unit}">Garrett Winters</td>
-															<td th:text="${uom.measurementSystem}">Garrett Winters</td>
-															
-															
+															<td th:if="${uom.measurementSystem=='B'}">British</td>
+																
+															<td th:if="${uom.measurementSystem=='F' }">French</td>
+
+
 
 
 
 															<td><span> <a
-																		th:href="@{/uom/edit/{id}(id=${uom.uomCode})}"><em
-																			class="fa fa-edit" style="color: blue;">
-																			Edit</em></a></span> 
-																<span> <a
-																		th:href="@{/uom/delete/{id}(id=${uom.uomCode})}"><em
-																			class="fa fa-times" style="color: red">
-																			Remove</em></a></span></td>
+																	th:href="@{/uom/edit/{id}(id=${uom.uomCode})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
+																	<a th:href="@{/uom/delete/{id}(id=${uom.uomCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a>
+															</span></td>
 														</tr>
 
 
@@ -92,7 +103,8 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -106,35 +118,39 @@
 					</div>
 				</section>
 			</div>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
+	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-			<script>
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
-			</script>
+			} else {
+				console.log("ajax request : " + message);
+			}
 
-			<!--   <section class="content">
+		});
+	</script>
+
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
