--- a/src/main/resources/templates/layouts/Master/userRights.html
+++ b/src/main/resources/templates/layouts/Master/userRights.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head >
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -115,10 +115,9 @@
 
 													<div class="form-group col-md-6">
 														<label class="form-label">Sub-Module</label><span
-															style="color: red">*</span> <label style="color: red">*</label>
-														<select class="form-control" id=""
-															title="This field is required" th:field="*{subModule}"
-															required>
+															style="color: red">*</span> <select class="form-control"
+															id="" title="This field is required"
+															th:field="*{subModule}" required>
 															<option value="">Select Module</option>
 															<option th:each="subModule :  ${listSubModule}"
 																th:text="${subModule.subModuleName}"
@@ -129,10 +128,9 @@
 
 													<div class="form-group col-md-6">
 														<label class="form-label">Program</label><span
-															style="color: red">*</span> <label style="color: red">*</label>
-														<select class="form-control" id=""
-															title="This field is required" th:field="*{prgCode}"
-															required>
+															style="color: red">*</span> <select class="form-control"
+															id="" title="This field is required"
+															th:field="*{prgCode}" required>
 															<option value="">Select</option>
 															<option th:each="program :  ${listProgram}"
 																th:text="${program.programName}"
@@ -143,8 +141,9 @@
 
 
 													<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="inlineRadioOptions">Active <input
-														type="radio" value="N" name="inlineRadioOptions">In-Active
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
 												</div>
 												<!-- /.box-body -->
@@ -162,7 +161,8 @@
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/userrights/list}" onclick='myFun()'>View All UserRights</a>
+											<a th:href="@{/userrights/list}" onclick='myFun()'>View
+												All UserRights</a>
 										</div>
 									</div>
 
@@ -183,12 +183,10 @@
 	function myFun(){ alert("under construction") }
 
 	<script>
-
-				$("#userRightForm").validate({
-					ignoreTitle: true
-				});
-
-			</script>
+		$("#userRightForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 
 
 	<!--   <section class="content">
