--- a/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
+++ b/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
@@ -43,7 +43,7 @@
 
 								<div class="box box-primary">
 									<div class="box-header with-border">
-										<h3 class="box-title">List of Category</h3>
+										<h3 class="box-title">List of Active Finance Year</h3>
 									</div>
 									<!-- form start -->
 									<form role="form">
