--- a/src/main/resources/templates/layouts/listview/listofUser.html
+++ b/src/main/resources/templates/layouts/listview/listofUser.html
@@ -69,13 +69,15 @@
 														
 
 
-															<td><span class="badge bg-success">Active</span></td>
+															<td th:if="${user.active=='Y'}"><span class="badge bg-success">Active</span></td>
+															<td th:if="${user.active=='N'}"><span class="badge bg-success">In Active</span></td>
+															
 
 															<td><span> <a
 																	th:href="@{/user/edit/{id}(id=${user.userCode})}"><em
 																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
 																	<a th:href="@{/user/delete/{id}(id=${user.userCode})}"><em
-																		class="fa fa-times" style="color: red"> Remove</em></a></a>
+																		class="fa fa-times" style="color: red"> Remove</em></a>
 															</span></td>
 														</tr>
 
