code commit@Rahul
form validation till party master

--- a/src/main/resources/templates/layouts/Master/userMaster.html
+++ b/src/main/resources/templates/layouts/Master/userMaster.html
@@ -80,7 +80,7 @@
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form id="userMasterForm" role="form" th:action="@{/user/update}"
+											<form id="userMasterForm" role="form" th:action="@{/user/}"
 												method="POST" th:object="${user}">
 												<div class="box-body">
 
