--- a/src/main/resources/templates/layouts/Master/program.html
+++ b/src/main/resources/templates/layouts/Master/program.html
@@ -109,10 +109,20 @@
 															title="This field is required" required>
 													</div>
 
-													<div class="form-group col-md-12">
-														<label class="form-label">Sub Module Name</label> <label
-															style="color: red">*</label> <select class="form-control"
-															th:field="*{subModuleMaster}" required
+													<div class="form-group col-md-6">
+														<label class="form-label">Select Module</label> <label
+															style="color: red">*</label> <select title="Module Name"
+															class="form-control" th:field="*{module}" required>
+															<option value="">Select</option>
+															<option th:each="module :  ${moduleList}"
+																th:text="${module.moduleName}"
+																th:value=" ${module.moduleCode}"></option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-6">
+														<label class="form-label">Sub Module Name</label>  <select class="form-control"
+															th:field="*{subModuleMaster}" 
 															title="This field is required">
 															<option value="">Select Sub Module</option>
 															<option th:each="subModule :  ${listSubModule}"
