--- a/src/main/resources/templates/layouts/listview/listofParty.html
+++ b/src/main/resources/templates/layouts/listview/listofParty.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -76,11 +76,11 @@
 														<tr th:each="party,iter  : ${partyList}">
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${party.partyCode}">Garrett Winters</td>
-															<td th:text="${party.partyName}">Garrett
-																Winters</td>
+															<td th:text="${party.partyName}">Garrett Winters</td>
 
-															<td th:text="${party.custType}">Garrett
-																Winters</td>
+															<td th:if="${party.custType=='S'}">Supplier</td>
+															<td th:if="${party.custType=='C'}">Customer</td>
+															<td th:if="${party.custType=='B'}">Both</td>
 
 
 
@@ -102,7 +102,8 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 										</div>
 
 									</form>
@@ -123,22 +124,22 @@
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
-$(document).ready(function() {
-var message = document.getElementById('mess').value
-if (message != null && message !== "") {
- 
-swal(message, "", "success", {
-button : "OK",
-hideClass : {
-popup : 'animate__animated animate__fadeOutUp'
-},
-});
-} else {
-console.log("ajax request : " + message);
-}
- 
-});
-</script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
+
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
+				});
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
 
 	<!--   <section class="content">
         
